fix flickering of links

--- a/frontend/src/pages/LandingPage/LandingPage.module.scss
+++ b/frontend/src/pages/LandingPage/LandingPage.module.scss
@@ -33,6 +33,11 @@
     z-index: 20;
   }
 }
+
+.locationsText {
+  opacity: 0;
+}
+
 .nav {
   position: absolute;
   width: 100%;
